--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="box">
             <div class="content">
-                <form action="https://api.johannespour.de/post" method="POST">
+                <form action="https://api.johannespour.de/post" method="POST" enctype="multipart/form-data">
                     <h1>Upload new Post</h1>
                     <hr>
                     <h2>Credentials</h2>
